# BookVoice

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  worker.py
alembic/: env.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/api/: __init__.py  audio.py  auth.py  books.py  users.py  websocket.py
app/core/: __init__.py  exceptions.py  middleware.py  security.py
app/models/: __init__.py  audio.py  book.py  user.py
app/schemas/: __init__.py  audio.py  book.py  user.py
app/services/: __init__.py  auth_service.py  book_service.py  storage_service.py  text_extractor.py  tts_service.py
app/static/css/: styles.css
app/static/js/: app.js  websocket.js
app/tasks/: __init__.py  audio_tasks.py
app/utils/: __init__.py  constants.py  helpers.py  validators.py
templates/: base.html
templates/auth/: login.html  register.html
templates/books/: detail.html  upload.html
templates/dashboard/: index.html
templates/dashboard/components/: audio_player.html  book_card.html
tests/: __init__.py  test_audio.py  test_auth.py  test_books.py
